--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     --botao-azul: #167BF7;
     --cor-de-fundo: #00030C;
     --fonte-principal: 'Inter';
+    --botao-azul-efeito: #bcbcbc;
 }
 
 * {
@@ -56,6 +57,11 @@ body {
     margin-bottom: 1em;
 }
 
+.container__botao:hover {
+    background-color: var(--botao-azul-efeito);
+    color: var(--cor-de-fundo);
+}
+
 .container__descricao {
     padding: 2em;
 }
@@ -63,6 +69,11 @@ body {
 .botao__secundario {
     background-color: transparent;
     border: 2px solid var(--branco-principal);
+}
+
+.botao__secundario:hover {
+    background-color: var(--botao-azul-efeito);
+    color: var(--cor-de-fundo);
 }
 
 .container__aviso {
@@ -95,3 +106,56 @@ body {
     margin-top: 1em;
 }
 
+.dispositivos {
+    text-align: center;
+}
+
+.dispositivos__titulo {
+    font-size: 48px;
+}
+
+.dispositivos__lista {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    color: var(--branco-principal);
+    margin: 5em 0;
+}
+
+.dispositivos__item {
+    font-size: 32px;
+    color: var(--branco-principal);
+}
+
+.rodape {
+    text-align: center;
+    margin: 5em 3em;
+}
+
+.rodape__lista {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    font-size: 16px;
+    margin-top: 1em;
+}
+
+.lista__link a {
+    text-decoration: none;
+    margin-left: 1em;
+    color: var(--branco-principal)
+}
+
+.lista__link a:hover {
+    color: var(--botao-azul);
+}
+
+.lista__link a:active {
+    color: purple;
+}
+
+.rodape__texto {
+    margin: 1em 0;
+    color: var(--cinza-secundario);
+    font-size: 14px;
+}
